--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,34 @@
 extends layout
+block header
+   div.hero-unit
+      h1 troy forster 
+         small musings on technology, adventure and environment
 block content
-   h1= title
-      - each article in articles
-         div.article
-            div.created_at= article.created_at
-            div.title
-               a(href="/blog/"+article._id)!= article.title
-            div.body= article.body
+   - each post in posts
+      div.post
+         div(class=post.type)!= post.date
+
+         div
+            case post.type
+               when "link"                        
+                  strong
+                     a(href="/blog/"+post._id)!= post.title
+                  br
+                  a(href=post.url)!= post.url
+               when "quote"
+                  blockquote
+                     p()!= post.text                        
+                     small()!= post.source                               
+               when "photo"
+                     strong
+                        p()!= post.caption
+                     img(src=post.photos[0].original_size.url)                        
+                     small()!= post.source                               
+               when "video"
+                  p
+               when "text"
+                  p
+               when "audio"
+                  p
+
+         hr
