--- a/views/index.jade
+++ b/views/index.jade
@@ -3,32 +3,30 @@ block header
    div.hero-unit
       h1 troy forster 
          small musings on technology, adventure and environment
-block content
+block recent-blog
+   h2 Recent Blog 
+      a(href="/blog/") Posts
    - each post in posts
       div.post
          div(class=post.type)!= post.date
 
          div
-            case post.type
-               when "link"                        
-                  strong
-                     a(href="/blog/"+post._id)!= post.title
-                  br
-                  a(href=post.url)!= post.url
-               when "quote"
-                  blockquote
-                     p()!= post.text                        
-                     small()!= post.source                               
-               when "photo"
-                     strong
-                        p()!= post.caption
-                     img(src=post.photos[0].original_size.url)                        
-                     small()!= post.source                               
-               when "video"
-                  p
-               when "text"
-                  p
-               when "audio"
-                  p
-
+            p.title
+               strong
+                  a(href="/blog/"+post.id)!= post.title
+            p.description !{post.description}
+            p.content !{post.content}
+            p.tags
+               - each tag in post.tags
+                  span #{tag}
          hr
+block recent-twitter
+   h2 Recent 
+      a(href="http://twitter.com/tforster") Tweets
+   a.twitter-timeline(href="https://twitter.com/tforster", data-widget-id="300633791611932672")Tweets
+   script(!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs")
+   iframe(src="http://embedagram.com/e/widget/1618422/", scrolling="no", frameborder="0", style="border:none; width:404px; height:144px; overflow:hidden;", allowTransparency="true")
+block recent-instagram
+   h2 Recent 
+      a(href="http://instagram.com/tforster") Instagrams
+   p instagram here
