--- a/views/category.jade
+++ b/views/category.jade
@@ -1,8 +1,6 @@
 ﻿extends layout
-
 block content
-   h3
-      a(href=categoryUrl(category)) posts in category * #{category}
-      each post in posts
-         include includes/postSnippet
-            
+  h3
+    a(href=categoryUrl(category)) posts in category * #{category}
+  - each post in posts
+    include includes/postSnippet
