--- a/views/post.jade
+++ b/views/post.jade
@@ -1,11 +1,10 @@
 ﻿extends layout
-
 block content
   div.post
     h1
       a(href=post.url)
         = post.title
-    span.date #{post.date.getMonth()+1}.#{post.date.getDate()}.#{post.date.getFullYear()}
+    span.date #{post.date.getFullYear()}\ #{post.date.getMonth()+1}\ #{post.date.getDate()}
     div.post.content
       != post.content
     div.tags
