Removed a pasted dev port number

--- a/views/index.jade
+++ b/views/index.jade
@@ -239,7 +239,7 @@ html
                 
                 p
                   | This is just a random sample. To see more projects please visit my blog at 
-                  a(href="http://localhost:3000/category/projects", rel="external") http://tforster.com/category/projects
+                  a(href="/category/projects", rel="external") http://tforster.com/category/projects
               //
                  /span8 
             //
