--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@
 
 
 
-@import url(http://fonts.googleapis.com/css-family=Open+Sans-300,400,700.css);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700.css);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400);
 
 /* Global */
