--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,7 @@ html
     link(href='css/bootstrap-responsive.css', rel='stylesheet', media='screen')
     link(href='css/font-awesome.css', rel='stylesheet')
     link(href='css/style.css', rel='stylesheet', media='screen')
+    link(href="https://abs.twimg.com/a/1376590666/tfw/css/tfw.bundle.css", media="screen", rel="stylesheet")
     //if IE 7
       link(href='css/font-awesome-ie7.min.css', rel='stylesheet')
     //if lt IE 9
@@ -17,8 +18,9 @@ html
     script(src='js/instafeed.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
     script(src='js/modernizr.js')
+    
     script.
-      var pageData = !{pageData};
+      var pageData = !{JSON.stringify(pageData)};
   body
 
     #wrapper
@@ -342,12 +344,81 @@ html
                  /span8 
               .span8.slide(data-blog='twitter')
                 .row-fluid
-                  .span6.expand
-                    h4 @tforster
-                    p(style='text-align: center;')
-                      a.twitter-timeline(href='https://twitter.com/tforster', data-widget-id='300633791611932672') Tweets by @tforster
-                        script.
-                          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+                  .span12.expand
+                     h4 @tforster 
+                     p #{JSON.parse(pageData.twitter)[0].user.description}
+
+                      #bd(role='main')
+                         .profile.summary
+                         .related.recent-tweets
+
+                           each tweet in JSON.parse(pageData.twitter)
+
+                             .tweet.simple-tweet.with-verbs.dogear.avatar-32
+                               .tweet-dogear
+                               .tweet-image.simple-tweet-image
+                                 a.user-profile-link(href='https://twitter.com/intent/user?screen_name=#{tweet.user.screen_name}', rel="external")
+                                   img(src='#{tweet.user.profile_image_url}', alt='', width='32', height='32')
+                               .tweet-content.simple-tweet-content.normal
+                                 .tweet-row
+                                   span.tweet-user-name
+                                     a.tweet-screen-name.user-profile-link(href='https://twitter.com/intent/user?screen_name=#{tweet.user.screen_name}', title='#{tweet.user.screen_name}', rel="external") #{tweet.user.screen_name}
+                                     span.tweet-full-name @#{tweet.user.screen_name}
+                                   .tweet-corner
+                                     .tweet-meta
+                                       .icons
+                                         .extra-icons
+                                           span.inlinemedia-icons
+                                 .tweet-row
+                                   .tweet-text #{tweet.text}
+                                 .tweet-row
+                                   a.tweet-timestamp(href='http://twitter.com/#{tweet.user.screen_name}/status/#{tweet.id_str}', title='#{tweet.created_at}', target='_blank')
+                                     span._timestamp
+                                       | #{tweet.created_at}
+                                   span.tweet-actions
+                                     a.reply-action.linksubmit(href='https://twitter.com/intent/tweet?in_reply_to=#{tweet.id_str}', rel="external")
+                                       span
+                                         i
+                                         b Reply
+                                     form(action='https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}', method='post')
+                                       div(style='margin: 0; padding: 0;')
+                                         input(name='authenticity_token', type='hidden', value='a77d92442d5b6dc5ec9dff25e36bf89d579941ff')
+                                       input#intent(name='intent', type='hidden', value='user')
+                                       a.retweet-action.linksubmit(href='https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}', rel="external")
+                                         span
+                                           i
+                                           b Retweet
+                                     form(action='https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}', method='post')
+                                       div(style='margin: 0; padding: 0;')
+                                         input(name='_method', type='hidden', value='delete')
+                                         input(name='authenticity_token', type='hidden', value='a77d92442d5b6dc5ec9dff25e36bf89d579941ff')
+                                       input#intent(name='intent', type='hidden', value='user')
+                                       a.unretweet-action.linksubmit(href='https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}', rel="external")
+                                         span
+                                           i
+                                           b Undo Retweet
+                                     form(action='https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}', method='post')
+                                       div(style='margin: 0; padding: 0;')
+                                         input(name='authenticity_token', type='hidden', value='a77d92442d5b6dc5ec9dff25e36bf89d579941ff')
+                                       input#intent(name='intent', type='hidden', value='user')
+                                       a.favorite-action.linksubmit(href='https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}', rel="external")
+                                         span
+                                           i
+                                           b Favorite
+                                     form(action='https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}', method='post')
+                                       div(style='margin: 0; padding: 0;')
+                                         input(name='_method', type='hidden', value='delete')
+                                         input(name='authenticity_token', type='hidden', value='a77d92442d5b6dc5ec9dff25e36bf89d579941ff')
+                                       input#intent(name='intent', type='hidden', value='user')
+                                       a.unfavorite-action.linksubmit(href='https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}', rel="external")
+                                         span
+                                           i
+                                           b Unfavorite
+
+                      
+
+
+
 
               .span8.slide(data-blog='tumblr')
                 .row-fluid
