--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,7 @@ html
     link(href='css/bootstrap.css', rel='stylesheet', media='screen')
     link(href='css/bootstrap-responsive.css', rel='stylesheet', media='screen')
     link(href='css/font-awesome.css', rel='stylesheet')
-    link(href='css/style.css', rel='stylesheet', media='screen')
-    link(href="https://abs.twimg.com/a/1376590666/tfw/css/tfw.bundle.css", media="screen", rel="stylesheet")
+    link(href='css/style.min.css', rel='stylesheet', media='screen')
     //if IE 7
       link(href='css/font-awesome-ie7.min.css', rel='stylesheet')
     //if lt IE 9
@@ -251,18 +250,19 @@ html
                 iframe(width='270', height='208', src='http://www.youtube.com/embed/dx2DmXKmjqA', frameborder='0', allowfullscreen='allowfullscreen')
 
                 //img(src='img/project01.png', alt='Project 01')
-                h6.hidden-phone - VISIT THE PROJECT PAGE
+                h6.hidden-phone - Nissan Mobile Showroom
               //
                  /span4     
 
               .span4
                 iframe(width='270', height='208', src='http://www.youtube.com/embed/YgOkV0Ts9NY', frameborder='0', allowfullscreen='allowfullscreen')
-                h6.hidden-phone - VISIT THE PROJECT PAGE
+                h6.hidden-phone - Infiniti Performance in G
               //
                  /span4 
               .span4
-                img(src='img/project03.png', alt='Project 03')
-                h6.hidden-phone - VISIT THE PROJECT PAGE
+                a(href="blog/tbwa-toronto-hackathon-2013", rel="external") 
+                  img(src='img/project05.jpg', alt='tbwa-toronto-hackathon-2013')
+                h6.hidden-phone - TBWA\Toronto Hackathon
               //
                  /span4 
             //
@@ -349,7 +349,6 @@ html
                      p #{JSON.parse(pageData.twitter)[0].user.description}
 
                       #bd(role='main')
-                         .profile.summary
                          .related.recent-tweets
 
                            each tweet in JSON.parse(pageData.twitter)
