--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,4 @@
-﻿!!! 5
-html
+﻿html
   head
     title Troy Forster
     meta(name='description', content='Troy Forster')
@@ -520,4 +519,4 @@ html
     script(src='js/jquery.easing.1.3.js')
     script(src='js/bootstrap.min.js')
     script(src='js/main.min.js')
-    script(src="js/ga.js");
+    script(src="js/ga.js")
