--- a/views/index.html
+++ b/views/index.html
@@ -22,14 +22,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
          </a>
-         <!--<div id="logo"> <a href="/"><img src="img/logo.svg" alt="logo" /></a> </div> -->
+
          <nav id="nav" role="navigation" class="navigation">
             <ul class="unstyled">
                <li data-section="1" class="active"><i class="icon-home"></i><span>Home</span></li>
                <li data-section="2"><i class="icon-user"></i><span>About</span></li>
                <li data-section="3"><i class="icon-laptop"></i><span>Projects</span></li>
                <li data-section="4"><i class="icon-pencil"></i><span>Social</span></li>
-               <li data-section="5" class="last"><i class="icon-envelope"></i><span>Contact</span></li>
+               <li data-section="5"><i class="icon-envelope"></i><span>Contact</span></li>
             </ul>
          </nav>
       </div>
@@ -262,20 +262,45 @@
                         <div class="span6 expand">
                            <h4>TechSmarts</h4>
                            <p style="text-align: left;">Curated articles and links of a technical nature intended for software engineers and developers.</p>
-                           <p><a href="https://github.com/3rd-Eden/licensing" rel="external">Report on NodeJS module licenses</a></p><p><a href="http://snips.net/blog/posts/2014/01-10-fast-interactive_prototyping_with_d3_js.html?utm_source=html5weekly&amp;utm_medium=email" rel="external">Creating prototypes with less programming. Solution for UX designers without a dev background.</a></p><p><a href="https://learn.sparkfun.com/tutorials/recreating-classic-electronics-kits" rel="external">I loved my 75-in-1 Electronics kit when I was a kid and now SparkFun is recreating it.</a></p><div class="pull-right read-more"><a href="http://techsmarts.tumblr.com" rel="external">Read More on TechSmarts<i class="icon-double-angle-right"></i></a></div>
+                           <%pageData.tumblr.techsmarts.posts.forEach(function(post, n){%>
+                           <p><a href="<%=post.url%>" rel="external"><%=post.title%></a></p>
+                           <%});%>
+                           <div class="pull-right read-more">
+                              <a href="http://techsmarts.tumblr.com" rel="external">Read more on techsmarts <i class="icon-double-angle-right"></i></a>
+                           </div>
                         </div>
                         <div class="span6 visible-desktop">
                            <h4>DigitalSmarts</h4>
                            <p style="text-align: left;">Curated articles and links of a less technical nature intended for digitally interested people in the account leadership and client services roles.</p>
-                           <p><a href="http://www.streetinsider.com/Press+Releases/Thought+Paying+With+Your+Phone+Was+Futuristic%3F+Now+You+Can+Pay+With+Your+Watch/9268815.html" rel="external">Store payments coming to a wrist near you? Scanable QR on Pebble</a></p>
-                           <p><a href="http://www.codeproject.com/Articles/732709/iBeacon-Bible-1-0" rel="external">Best description of iBeacon in layperson terms I have seen</a></p><p><a href="http://www.adafruit.com/blog/2014/02/07/the-view-from-nextdoor-earth-as-seen-from-the-martian-surface/" rel="external">Ever feel you're a long way from home?</a></p><div class="pull-right read-more"><a href="http://digitalsmarts.tumblr.com" rel="external">Read More on DigitalSmarts<i class="icon-double-angle-right"></i></a></div>
+                           <%pageData.tumblr.digitalsmarts.posts.forEach(function(post, n){%>
+                           <p><a href="<%=post.url%>" rel="external"><%=post.title%></a></p>
+                           <%});%>
+                           <div class="pull-right read-more">
+                              <a href="http://digitalsmarts.tumblr.com" rel="external">Read more on digitalsmarts <i class="icon-double-angle-right"></i></a>
+                           </div>
                         </div>
                      </div>
                   </div>
                   <div data-blog="instagram" class="span8 slide">
                      <div class="row-fluid">
-                        <div class="span6 expand"><h4 style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;"></h4><p style="text-align: center;"><a rel="external"><img /></a></p><div class="pull-right read-more hidden-desktop"><a href="http://instagram.com/tforster" rel="external">See more of my Instagrams<i class="icon-double-angle-right"></i></a></div></div>
-                        <div class="span6 visible-desktop"><h4 style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;"></h4><p style="text-align: center;"><a rel="external"><img /></a></p><div class="pull-right read-more"><a href="http://instagram.com/tforster" rel="external">See more of my Instagrams<i class="icon-double-angle-right"></i></a></div></div>
+                        <div class="span6 expand">
+                           <h4 style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;"><%=pageData.instagram.posts[0].caption.text%></h4>
+                           <p style="text-align: center;">
+                              <a href="<%=pageData.instagram.posts[0].link%>" rel="external"><img src="<%=pageData.instagram.posts[0].images.low_resolution.url%>" title="<%=pageData.instagram.posts[0].caption.text%>" /></a>
+                           </p>
+                           <div class="pull-right read-more hidden-desktop">
+                              <a href="http://instagram.com/tforster" rel="external">See more of my Instagrams<i class="icon-double-angle-right"></i></a>
+                           </div>
+                        </div>
+                        <div class="span6 expand">
+                           <h4 style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;"><%=pageData.instagram.posts[1].caption.text%></h4>
+                           <p style="text-align: center;">
+                              <a href="<%=pageData.instagram.posts[1].link%>" rel="external"><img src="<%=pageData.instagram.posts[1].images.low_resolution.url%>" title="<%=pageData.instagram.posts[1].caption.text%>" /></a>
+                           </p>
+                           <div class="pull-right read-more hidden-desktop">
+                              <a href="http://instagram.com/tforster" rel="external">See more of my Instagrams<i class="icon-double-angle-right"></i></a>
+                           </div>
+                        </div>
                      </div>
                   </div>
                   <div data-blog="github" class="span8 slide">
@@ -301,9 +326,10 @@
                <div class="row-fluid content">
                   <div class="span4">
                      <h4 class="intro">Drop me a Line!</h4><p>Enough about me, let s hear about you. </p>
-                     <div class="row-fluid alt"><h5>Email:</h5><span>troy.forster@gmail.com</span></div>
-                     <div class="row-fluid alt"><h5>SMS:</h5><span>+1 (416) 617-4921</span></div>
+                     <div class="row-fluid alt"><h5>Email:</h5><span><a href="mailto:troy.forster@gmail.com" rel="external">troy.forster@gmail.com</a></span></div>
+                     <div class="row-fluid alt"><h5>SMS:</h5><span><a href="sms:+14166174921">+1 416 617 4921</a></span></div>
                      <div class="row-fluid alt"><h5>Twitter:</h5><span><a href="http://www.twitter.com/tforster" rel="external">@tforster</a></span></div>
+                     <div class="row-fluid alt"><h5>LinkedIn:</h5><span><a href="http://www.linkedin.com/in/tforster" rel="external">http://www.linkedin.com/in/tforster</a></span></div>
                   </div>
                   <div class="span8">
                      <div class="row-fluid">
@@ -322,13 +348,12 @@
          </section>
       </div>
    </div>
-   <script src="js/instafeed.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
    <script src="js/waypoints.min.js"></script>
    <script src="js/jquery.knob.js"></script>
    <script src="js/jquery.easing.1.3.js"></script>
    <script src="js/bootstrap.min.js"></script>
-   <script src="js/main.min.js"></script>
+   <script src="js/main.js"></script>
    <script src="js/ga.js"></script>
 </body>
 </html>
