Implemented grunt task for minification, concatenation and cache busting.

--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,16 @@
-﻿<html>
+<html>
 <head>
    <title>Troy Forster</title>
    <meta name="description" content="Troy Forster" />
    <meta name="author" content="Troy Forster" />
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-   <link href="css/bootstrap.css" rel="stylesheet" media="screen" />
-   <link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen" />
-   <link href="css/font-awesome.css" rel="stylesheet" />
-   <link href="css/style.min.css" rel="stylesheet" media="screen" />
-   <!--if IE 7link(href='css/font-awesome-ie7.min.css', rel='stylesheet')-->
-   <!--if lt IE 9script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')-->
-   <script src="js/modernizr.js"></script>
-   <script>var pageData = <%-JSON.stringify(pageData)%>;</script>
+   <link href="/stylesheets/main.min.css?rel=759625f4dd" rel="stylesheet" media="screen" />
+   <!--if IE 7
+      link(href="css/font-awesome-ie7.min.css", rel="stylesheet")-->
+   <!--if lt IE 9
+      script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")-->
+   <script src="/scripts/modernizr.js"></script>
 </head>
 <body>
    <div id="wrapper">
@@ -349,11 +347,6 @@
       </div>
    </div>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-   <script src="js/waypoints.min.js"></script>
-   <script src="js/jquery.knob.js"></script>
-   <script src="js/jquery.easing.1.3.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/ga.js"></script>
+   <script src="/scripts/main.min.js?rel=759625f4dd"></script>
 </body>
 </html>
