Cleaned up old min and map files.

--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
    <title>Troy Forster</title>
    <meta name="description" content="Troy Forster" />
@@ -10,7 +10,7 @@
       link(href="css/font-awesome-ie7.min.css", rel="stylesheet")-->
    <!--if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")-->
-   <script src="/scripts/modernizr.js"></script>
+   <script src="/scripts/modernizr.min.js"></script>
 </head>
 <body>
    <div id="wrapper">
